6539464: Math.log() produces inconsistent results between successive runs

Reviewed-by: kvn